# sp_sdg

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  RESEARCH_PLAN.md  init_project_structure.sh  pyproject.toml
.claude/agents/: experiment-runner.md  implementation-engineer.md  report-engineer.md  research-analyst.md  result-auditor.md
.claude/commands/: audit-results.md  build-report.md  reproducibility-notes.md  run-phase1.md  run-smoke.md
.github/workflows/: deploy-pages.yml
artifacts/: audit_checklist.md  audit_report.json  decision_log.md  deviations.md  ds2_design.md  ds3_design.md  ds5_assessment.md  findings.json  h2_gap_analysis.json  judgment_calls.yaml  limitations.md  pre_registration.md  preprocessing_notes.yaml  reproduction_notes.md  reproduction_steps.yaml  state.md  task_queue.yaml
config/: augmentations.yaml  datasets.yaml  models.yaml
config/experiments/: h2_gap.yaml  negative_control.yaml  pamap2_negative_control.yaml  pamap2_subject_count.yaml  pamap2_target_baseline.yaml  phase1.yaml  phase2.yaml  smoke.yaml  subject_count.yaml  wesad_negative_control.yaml  wesad_subject_count.yaml  wesad_target_baseline.yaml  (+2 more)
docs/: plan.md  spec.md
references/: paper_matrix.csv  reproduction_targets.yaml
report/: package-lock.json  package.json  tailwind.config.js
scripts/: aggregate_results.py  analyze_gap.py  audit_results.py  build_report.py  compact_logs.py  download_datasets.py  run_experiment.py  run_subject_experiment.py  validate_artifacts.py
tests/: conftest.py  test_pamap2.py  test_wesad.py  test_wisdm.py
(+6026 files in other folders)
