[project]
name = "signal-aug"
version = "0.1.0"
description = "Signal data augmentation reproduction study on UCR time series datasets"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2.2",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "aeon>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_aug"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
